--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-6 text-left">
       <dx-text-box
         class="mat-h2"
-        value="A123456789"
+        [(value)]="identifierValue"
         #identifier
         [showClearButton]="true"
         valueChangeEvent="blur"
