refactor: adjust width

--- a/src/app/pages/case-management/case-list/case-list.component.html
+++ b/src/app/pages/case-management/case-list/case-list.component.html
@@ -35,11 +35,10 @@
         </dxo-form>
       </dxo-editing>
       <dxi-column dataField="identifier[0].value" caption="身份證字號" dataType="string"
-                  [width]="150"
-                  [setCellValue]="setIdentifier"></dxi-column>
+                  [width]="100" [setCellValue]="setIdentifier"></dxi-column>
       <dxi-column dataField="name[0].text" caption="姓名" dataType="string" [width]="100"
                   [setCellValue]="setName"></dxi-column>
-      <dxi-column dataField="gender" caption="性別" dataType="object" [width]="50"
+      <dxi-column dataField="gender" caption="性別" dataType="object" [width]="80"
                   [setCellValue]="setGender"></dxi-column>
       <dxi-column dataField="birthDate" caption="出生日期" dataType="datetime" format="yyyy-MM-dd" [width]="100"
                   [setCellValue]="setBirthDate"></dxi-column>
@@ -49,8 +48,8 @@
                   [setCellValue]="setTelecom"></dxi-column>
       <dxi-column caption="聯絡人" dataType="string" cellTemplate="contactTemplate"
                   [setCellValue]="setContact"></dxi-column>
-      <dxi-column caption="檢驗值" dataType="string" cellTemplate="labTemplate"></dxi-column>
-      <dxi-column caption="歷史" dataType="string" cellTemplate="historyTemplate"></dxi-column>
+      <dxi-column caption="檢驗值" dataType="string" cellTemplate="labTemplate" [width]="130"></dxi-column>
+      <dxi-column caption="歷史" dataType="string" cellTemplate="historyTemplate" [width]="120"></dxi-column>
 
       <div *dxTemplate="let row of 'telecomTemplate'">
         <div *ngFor="let item of row.data.telecom; let i = index">
