refactor: change URL

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -23,6 +23,6 @@
     <button class="btn btn-sm btn-info" (click)="update(baseUrl.value)"><mat-icon [inline]="true">done</mat-icon></button>
   </nb-action>
   <nb-action class="control-item">
-    <input class="mat-h3" type="text" nbInput #baseUrl placeholder="輸入 BaseURL" style="width: 404px;" value="http://hapi.fhir.org/baseDstu3"/>
+    <input class="mat-h3" type="text" nbInput #baseUrl placeholder="輸入 BaseURL" style="width: 404px;" value="https://sandbox.pickonefish.org/baseDstu3"/>
   </nb-action>
 </nb-actions>
