--- a/src/app/pages/case-management/case-list/case-list.component.html
+++ b/src/app/pages/case-management/case-list/case-list.component.html
@@ -50,6 +50,7 @@
                   [setCellValue]="setContact"></dxi-column>
       <dxi-column caption="檢驗值" dataType="string" cellTemplate="labTemplate" [width]="130"></dxi-column>
       <dxi-column caption="歷史" dataType="string" cellTemplate="historyTemplate" [width]="120"></dxi-column>
+      <dxi-column caption="原始資料" dataType="string" cellTemplate="rawDataTemplate" [width]="120"></dxi-column>
 
       <div *dxTemplate="let row of 'telecomTemplate'">
         <div *ngFor="let item of row.data.telecom; let i = index">
@@ -72,6 +73,25 @@
       <div *dxTemplate="let row of 'historyTemplate'">
         <button class="btn btn-warning" >歷史資料</button>
       </div>
+      <div *dxTemplate="let row of 'rawDataTemplate'">
+        <button class="btn btn-sm btn-dark" (click)="onRawData(row.data)">原始資料</button>
+      </div>
     </dx-data-grid>
+
+    <dx-popup
+      class="popup"
+      [width]="600"
+      [height]="600"
+      [showTitle]="true"
+      title="Patient Resource"
+      [dragEnabled]="false"
+      [closeOnOutsideClick]="true"
+      [(visible)]="popupVisible">
+      <div *dxTemplate="let item of 'content'">
+        <dx-scroll-view >
+          <pre class="mat-h3">{{data | json}}</pre>
+        </dx-scroll-view>
+      </div>
+    </dx-popup>
   </nb-card-body>
 </nb-card>
