fix: double findPatient

--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -9,8 +9,7 @@
         [(value)]="identifierValue"
         #identifier
         [showClearButton]="true"
-        valueChangeEvent="blur"
-        (onValueChanged)="findPatient($event.value)">
+        valueChangeEvent="blur">
       </dx-text-box>
     </div>
     <div class="col-md-2">
