refactor: move to observation module

--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -31,7 +31,7 @@
 <nb-card>
   <nb-card-body>
 
-    <ngx-lab-list [dataSet]="dataSet"></ngx-lab-list>
+    <ngx-observation-list [dataSet]="dataSet"></ngx-observation-list>
     <dx-popup
       class="popup"
       [width]="600"
