feat: loading observation data

--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ngx-observation-list ></ngx-observation-list>
+          <ngx-observation-list [dataSet]="dataSet"></ngx-observation-list>
           <br/>
           <hr/>
         </div>
