--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -13,6 +13,21 @@
       <div class="row">
         <div class="col-md-12">
           <ngx-observation-list [dataSet]="dataSet" (rawdata)="onRawData($event)"></ngx-observation-list>
+          <dx-popup
+            class="popup"
+            [width]="600"
+            [height]="600"
+            [showTitle]="true"
+            title="Observation Resource"
+            [dragEnabled]="false"
+            [closeOnOutsideClick]="true"
+            [(visible)]="popupVisible">
+            <div *dxTemplate="let item of 'content'">
+              <dx-scroll-view >
+                <pre class="mat-h3">{{data | json}}</pre>
+              </dx-scroll-view>
+            </div>
+          </dx-popup>
           <br/>
           <hr/>
         </div>
