--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -6,7 +6,7 @@
           <div class="dx-field-label mat-h2"> 姓名</div>
         </div>
         <div class="col-md-8 text-left">
-          <!--<div class="mat-h2" *ngIf="patient"> {{patient?.name[0]?.text}}</div>-->
+          <div class="mat-h2" *ngIf="patient"> {{patient?.name[0]?.text}}</div>
           <div class="mat-h2" *ngIf="!patient"> 沒有查詢到任何病人</div>
         </div>
       </div>
