fix: input data to condition-list & procedure-list Components

--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -12,8 +12,8 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ngx-condition-list ></ngx-condition-list>
-          <ngx-procedure-list ></ngx-procedure-list>
+          <ngx-condition-list [dataSet]="conditions" ></ngx-condition-list>
+          <ngx-procedure-list [dataSet]="procedures" ></ngx-procedure-list>
 
           <br/>
           <hr/>
