--- a/src/app/pages/history/procedure-list/procedure-list.component.html
+++ b/src/app/pages/history/procedure-list/procedure-list.component.html
@@ -1,5 +1,6 @@
 
 <dx-data-grid id="gridContainer"
+              [dataSource]="dataSource"
               [showRowLines]="true"
               [showColumnLines]="true"
               [showBorders]="true">
