--- a/src/app/pages/history/procedure-list/procedure-list.component.html
+++ b/src/app/pages/history/procedure-list/procedure-list.component.html
@@ -18,8 +18,8 @@
 
   <dxi-column dataField="code.coding[0].display" caption="處置" dataType="string"></dxi-column>
   <dxi-column dataField="status" caption="狀態" dataType="string"></dxi-column>
-  <dxi-column caption="Raw Data" cellTemplate="rawDataTemplate"></dxi-column>
+  <dxi-column caption="Raw Data" cellTemplate="rawDataTemplate" [width]="100"></dxi-column>
   <div *dxTemplate="let row of 'rawDataTemplate'">
-    <button class="btn btn-warning" (click)="onRawData(row.data)">原始資料</button>
+    <button class="btn btn-xs btn-warning" (click)="onRawData(row.data)">原始資料</button>
   </div>
 </dx-data-grid>
