feat: create condition resource

--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -12,7 +12,9 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ngx-condition-list [dataSet]="conditions" ></ngx-condition-list>
+          <ngx-condition-list [dataSet]="conditions"
+                              (create)="onCreateCondition($event)"
+          ></ngx-condition-list>
           <br />
           <br />
           <ngx-procedure-list [dataSet]="procedures" ></ngx-procedure-list>
