feat: del condition resource

--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -15,6 +15,7 @@
           <ngx-condition-list [dataSet]="conditions"
                               (create)="onCreateCondition($event)"
                               (update)="onUpdateCondition($event)"
+                              (delete)="onDeleteCondition($event)"
           ></ngx-condition-list>
           <br />
           <br />
