fix: create form for resource creating or resource updating

--- a/src/app/pages/history/procedure-list/procedure-list.component.html
+++ b/src/app/pages/history/procedure-list/procedure-list.component.html
@@ -1,4 +1,3 @@
-
 <dx-data-grid id="gridContainer"
               [dataSource]="dataSource"
               [showRowLines]="true"
@@ -15,14 +14,20 @@
 
   <dxo-editing mode="popup" [allowAdding]="true" [allowUpdating]="true" [allowDeleting]="true">
     <dxo-popup title="處置資訊" [showTitle]="true" [width]="800" [height]="300"></dxo-popup>
-    <dxo-form >
+    <dxo-form [colCount]="1" [labelLocation]="'left'">
       <dxi-item dataField="code.coding[0].display"></dxi-item>
-      <dxi-item dataField="status"></dxi-item>
+      <dxi-item dataField="status" editorType="dxSelectBox" [isRequired]="true"></dxi-item>
     </dxo-form>
   </dxo-editing>
 
-  <dxi-column dataField="code.coding[0].display" caption="處置" dataType="string"></dxi-column>
-  <dxi-column dataField="status" caption="狀態" dataType="string"></dxi-column>
+  <dxi-column dataField="code.coding[0].display" caption="處置" dataType="string" [setCellValue]="setCodingCode"></dxi-column>
+  <dxi-column dataField="status" caption="狀態" dataType="string" [setCellValue]="setStatusValue">
+    <dxo-lookup
+      [dataSource]="statusItems"
+      valueExpr="key"
+      displayExpr="value">
+    </dxo-lookup>
+  </dxi-column>
   <dxi-column caption="Raw Data" cellTemplate="rawDataTemplate" [width]="100"></dxi-column>
   <div *dxTemplate="let row of 'rawDataTemplate'">
     <button class="btn btn-xs btn-warning" (click)="onRawData(row.data)">原始資料</button>
