fix: CUD to Resource Sever

--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -19,7 +19,11 @@
           ></ngx-condition-list>
           <br />
           <br />
-          <ngx-procedure-list [dataSet]="procedures" ></ngx-procedure-list>
+          <ngx-procedure-list [dataSet]="procedures"
+                              (create)="onCreateProcedure($event)"
+                              (update)="onUpdateProcedure($event)"
+                              (delete)="onDeleteProcedure($event)"
+          ></ngx-procedure-list>
 
           <br/>
           <hr/>
