fix: change to code.text

--- a/src/app/pages/observation/observation-list/observation-list.component.html
+++ b/src/app/pages/observation/observation-list/observation-list.component.html
@@ -11,7 +11,7 @@
   <dxo-group-panel [visible]="true"></dxo-group-panel>
   <dxo-grouping #expand [autoExpandAll]="true"></dxo-grouping>
 
-  <dxi-column [groupIndex]="0" dataField="code.coding[0].code" caption="編碼"
+  <dxi-column [groupIndex]="0" dataField="code.text" caption="分類"
               dataType="string"></dxi-column>
   <dxi-column dataField="effectiveDateTime" caption="測量日期時間" dataType="datetime"
               format="yyyy-MM-dd'T'hh:mm:ss"></dxi-column>
