--- a/src/app/pages/history/condition-list/condition-list.component.html
+++ b/src/app/pages/history/condition-list/condition-list.component.html
@@ -19,6 +19,7 @@
     </dxo-form>
   </dxo-editing>
 
+  <dxi-column dataField="assertedDate" caption="診斷時間" dataType="datetime" format="yyyy-MM-dd'T'HH:mm:ss"></dxi-column>
   <dxi-column dataField="code.coding[0].display" caption="診斷" dataType="string" [setCellValue]="setCodingCode"></dxi-column>
   <dxi-column caption="Raw Data" cellTemplate="rawDataTemplate" [width]="100"></dxi-column>
   <div *dxTemplate="let row of 'rawDataTemplate'">
