feat: add a new columne for 'Code'

--- a/src/app/pages/history/condition-list/condition-list.component.html
+++ b/src/app/pages/history/condition-list/condition-list.component.html
@@ -15,12 +15,14 @@
   <dxo-editing mode="popup" [allowAdding]="true" [allowUpdating]="true" [allowDeleting]="true">
     <dxo-popup title="診斷資訊" [showTitle]="true" [width]="800" [height]="300"></dxo-popup>
     <dxo-form [colCount]="1" [labelLocation]="'left'" formData="">
-      <dxi-item dataField="code.coding[0].display"></dxi-item>
+      <dxi-item dataField="code.coding[0].display" [isRequired]="true"></dxi-item>
+      <dxi-item dataField="code.coding[0].code" [isRequired]="true"></dxi-item>
     </dxo-form>
   </dxo-editing>
 
   <dxi-column dataField="assertedDate" caption="診斷時間" dataType="datetime" format="yyyy-MM-dd'T'HH:mm:ss"></dxi-column>
-  <dxi-column dataField="code.coding[0].display" caption="診斷" dataType="string" [setCellValue]="setCodingCode"></dxi-column>
+  <dxi-column dataField="code.coding[0].display" caption="診斷" dataType="string" [setCellValue]="setCodingDisplay"></dxi-column>
+  <dxi-column dataField="code.coding[0].code" caption="診斷代碼" dataType="string" [setCellValue]="setCodingCode"></dxi-column>
   <dxi-column caption="Raw Data" cellTemplate="rawDataTemplate" [width]="100"></dxi-column>
   <div *dxTemplate="let row of 'rawDataTemplate'">
     <button class="btn btn-xs btn-warning" (click)="onRawData(row.data)">原始資料</button>
