--- a/src/app/pages/history/procedure-list/procedure-list.component.html
+++ b/src/app/pages/history/procedure-list/procedure-list.component.html
@@ -1,4 +1,4 @@
-<dx-data-grid id="gridContainer"
+<dx-data-grid id="procedureGrid"
               [dataSource]="dataSource"
               [showRowLines]="true"
               [showColumnLines]="true"
@@ -7,6 +7,8 @@
               (onRowInserting)="onRowInserting($event)"
               (onRowUpdating)="onRowUpdating($event)"
               (onRowRemoving)="onRowRemoving($event)"
+
+              (onToolbarPreparing)="onToolbarPreparing($event)"
 >
 
   <dxo-paging [pageSize]="10"></dxo-paging>
@@ -36,3 +38,14 @@
     <button class="btn btn-xs btn-warning" (click)="onRawData(row.data)">原始資料</button>
   </div>
 </dx-data-grid>
+
+<dx-load-panel
+  #loadPanel
+  shadingColor="rgba(0,0,0,0.4)"
+  [position]="{ of: '#procedureGrid' }"
+  [(visible)]="loadingVisible"
+  [showIndicator]="true"
+  [showPane]="true"
+  [shading]="true"
+  [closeOnOutsideClick]="false">
+</dx-load-panel>
