fix: create resource bug

--- a/src/app/pages/history/condition-list/condition-list.component.html
+++ b/src/app/pages/history/condition-list/condition-list.component.html
@@ -4,6 +4,7 @@
               [showColumnLines]="true"
               [showBorders]="true"
 
+              (onInitNewRow)="onInitNewRow($event)"
               (onRowInserting)="onRowInserting($event)"
               (onRowUpdating)="onRowUpdating($event)"
               (onRowRemoving)="onRowRemoving($event)"
